Added Position Report

--- a/BuildingEscape/Config/DefaultGame.ini
+++ b/BuildingEscape/Config/DefaultGame.ini
@@ -1,5 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=BAA71412441EF69C927F67BE3E9ED223
+CompanyName=Microgames
+CopyrightNotice=Copyright is mine 2016
 
 [StartupActions]
 bAddPacks=True
